src/objects/Suggestion__c.object
<CustomObject>
    <fields>
        <fullName>Implemented_Date__c</fullName>
        <label>Implemented Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Under Consideration</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggestion_Category__c</fullName>
        <label>Suggestion Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Employee Services</fullName>
                </value>
                <value>
                    <fullName>Facilities/ IT</fullName>
                </value>
                <value>
                    <fullName>Kitchen Snacks</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggestion_Description__c</fullName>
        <inlineHelpText>Please enter as much detail around this suggestion so we clearly understand your idea.</inlineHelpText>
        <label>Suggestion Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Suggestion</label>
    <nameField>
        <label>Suggestion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>